Fixed spacing issues with the loader overlay on the week view

--- a/src/components/ScheduleWeek/ScheduleWeek.css
+++ b/src/components/ScheduleWeek/ScheduleWeek.css
@@ -9,11 +9,12 @@
   background-color: rgba(34, 34, 34, .5);
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-top: 60px;
-  z-index: 11;
+  align-items: flex-start;
+  margin-top: 76px;
+  padding-top: 30px;
+  z-index: 25;
   width: 100%;
-  height: 75vh;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
